@@ -1,3 +1,7 @@
+2007-02-09  Richard Dale  <rdale@foton.es>
+
+	* Renamed CreateStrongReference() as IsInstanceContained()
+
 2007-02-08  Arno Rehn  <arno@arnorehn.de>
 
 	* Made destructors work. The only problem was that we have to check
